force-app/main/default/objects/Activity_Template_List__c/Activity_Template_List__c.object-meta.xml
<CustomObject>
    <label>Activity Template List</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Activity Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Template List</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>