force-app/main/default/objects/Activity_Template_List__c/fields/Activity_Template__c.field-meta.xml
<CustomField>
    <fullName>Activity_Template__c</fullName>
    <label>Activity Template</label>
    <referenceTo>Activity_Template__c</referenceTo>
    <relationshipLabel>Activity Template List</relationshipLabel>
    <relationshipName>Activity_Template_List</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>