force-app/main/default/objects/Activity_Template_List__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type1</fullName>
            </value>
            <value>
                <fullName>Type2</fullName>
            </value>
            <value>
                <fullName>Type3</fullName>
            </value>
            <value>
                <fullName>Type4</fullName>
            </value>
            <value>
                <fullName>Type5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>